# pokeapi

./: Makefile  ReadME.md  main.py  pyproject.toml
src/pokeapi/: app.py  generation.py  pokemon.py
src/pokeapi/models/: generation.py  pokemon.py
src/pokeapi/services/: pokemon_service.py
src/pokeapi/tests/integration/: test_get_generation.py  test_get_pokemon.py
src/pokeapi/tests/unit/: test_get_generation.py  test_get_pokemon.py
